<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.mjako18</groupId>
	<artifactId>chatbot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>chatbot</name>
	<description>Chatbot for ØS</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>23</java.version>
		<logback.version>1.5.7</logback.version>
		<jlama.version>0.8.3</jlama.version>
	</properties>
	<dependencies>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-docker-compose</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-core</artifactId>
		</dependency>

		<dependency>
			<groupId>com.github.tjake</groupId>
			<artifactId>jlama-core</artifactId>
			<version>${jlama.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.tjake</groupId>
			<artifactId>jlama-native</artifactId>
			<classifier>${os.detected.classifier}</classifier>
			<version>${jlama.version}</version>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-jlama</artifactId>
			<version>1.0.0-alpha1</version>
			<exclusions>
				<exclusion>
					<groupId>com.github.tjake</groupId>
					<artifactId>jlama-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j</artifactId>
			<version>1.0.0-alpha1</version>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-spring-boot-starter</artifactId>
			<version>1.0.0-alpha1</version>
		</dependency>

		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-open-ai</artifactId>
			<version>1.0.0-alpha1</version>
		</dependency>

		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
			<version>1.0.0-alpha2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
			<version>0.30.0</version>
		</dependency>

		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-document-parser-apache-poi</artifactId>
			<version>0.30.0</version>
		</dependency>
    </dependencies>

	<build>
		<extensions>
			<extension>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>1.7.1</version>
			</extension>
		</extensions>
		<plugins>
			<plugin>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>1.7.1</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>detect</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>${java.version}</release>
					<enablePreview>true</enablePreview>
				</configuration>
				<executions>
					<execution>
						<id>functions</id>
						<configuration>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
								<argument>--add-modules=jdk.incubator.vector</argument>
								<argument>--enable-native-access=ALL-UNNAMED</argument>
								<argument>JlamaAiFunctionCallingExamples$Payment_Data_From_AiServices</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>rag</id>
						<configuration>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
								<argument>--add-modules=jdk.incubator.vector</argument>
								<argument>--enable-native-access=ALL-UNNAMED</argument>
								<argument>JlamaBasicRagEmbedExamples$Chat_Story_From_My_Document</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>stream</id>
						<configuration>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
								<argument>--add-modules=jdk.incubator.vector</argument>
								<argument>--enable-native-access=ALL-UNNAMED</argument>
								<argument>--enable-preview</argument>
								<argument>JlamaStreamingChatModelExamples$Simple_Streaming_Prompt</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>chat</id>
						<configuration>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
								<argument>--add-modules=jdk.incubator.vector</argument>
								<argument>--enable-native-access=ALL-UNNAMED</argument>
								<argument>--enable-preview</argument>
								<argument>JlamaChatModelExamples$Simple_Prompt</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<executable>${java.home}/bin/java</executable>
				</configuration>
				<executions>
					<execution>
						<id>functions</id>
						<configuration>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
								<argument>--add-modules=jdk.incubator.vector</argument>
								<argument>--enable-native-access=ALL-UNNAMED</argument>
								<argument>JlamaAiFunctionCallingExamples$Payment_Data_From_AiServices</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>rag</id>
						<configuration>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
								<argument>--add-modules=jdk.incubator.vector</argument>
								<argument>--enable-native-access=ALL-UNNAMED</argument>
								<argument>JlamaBasicRagEmbedExamples$Chat_Story_From_My_Document</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>stream</id>
						<configuration>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
								<argument>--add-modules=jdk.incubator.vector</argument>
								<argument>--enable-native-access=ALL-UNNAMED</argument>
								<argument>--enable-preview</argument>
								<argument>JlamaStreamingChatModelExamples$Simple_Streaming_Prompt</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>chat</id>
						<configuration>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
								<argument>--add-modules=jdk.incubator.vector</argument>
								<argument>--enable-native-access=ALL-UNNAMED</argument>
								<argument>--enable-preview</argument>
								<argument>JlamaChatModelExamples$Simple_Prompt</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
